# substrate-node-template

./: .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE  bench  bench.txt  build  customSpecRaw.json  docker-compose.yml  gen_specs  myCustomSpec.json  turbofish.rs
node/: BUILD.bazel
pallets/template/: BUILD.bazel  Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: BUILD.bazel  Cargo.toml  build.rs
runtime/src/: lib.rs
